<resources>
    <string name="app_name">App</string>
    <string name="username">Raull</string>
    <string name="keterangan">Ada 4 update infromasi terbaru buat kamu</string>
    <string name="keterangan1">ayo berikan laporan anda mengenaikan infrastruktur yang rusak demi tersedia infrastruktur yang  nyaman </string>
    <string name="keterangan2">ayo cek laporan  mengenaikan infrastruktur yang rusak demi tersedia infrastruktur yang  nyaman </string>
    <string name="keterangan3">ayo cek saran  mengenaikan infrastruktur yang rusak demi tersedia infrastruktur yang  nyaman </string>
    <string name="laporkan">Laporkan !</string>
    <string name="ceklaporan">Cek Laporan !</string>
    <string name="ceksaran">Cek Saran !</string>
    <string name="ketlaporan">Daftar laporan anda</string>
    <string name="ketsaran">Daftar saran anda</string>
    <string name="berita1">Pemerintah Kota Pekanbaru kembali memperbaiki jalan bangau sakti setelah ada laporan dari warga</string>
    <string name="tgl1">Dec 30 2021   EuroNews   4 min read</string>
    <string name="beranda">Beranda</string>
    <string name="laporan">Laporan</string>
    <string name="saran">Saran</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="ketmasuk">Bagikan aspirasi anda sekarang!</string>
    <string name="ketdaftar">Silahkan isi data diri anda</string>
    <string name="dafnama">Masukkan Nama Lengkap</string>
    <string name="dafnotelp">Masukkan Email</string>
    <string name="dafrole">Pilih Role</string>
    <string name="dafalamat">Masukkan Alamat Anda</string>
    <string name="dafpassword">Masukkan Password</string>
    <string name="jdlLaporan">Judul Laporan</string>
    <string name="jdlSaran">Judul Saran</string>
    <string name="tglLaporan">30 Des 2023</string>
    <string name="tglsaran">30 Des 2023</string>
    <string name="descLaporan">Ada jalan rusak di jl. Bangau sakti panam, jalan sudah sekitar berbulan-bulan tidak diperbaiki, mohon di perbaiki</string>
    <string name="descSaran">Saya ada ide untuk di bangun sebuah jpo di jalan Diponegoro tepatnya di depan arya duta untuk mempermudah pejalan kaki</string>
    <string name="tambahlaporan">Tambah Laporan</string>
    <string name="tambahsaran">Tambah Saran</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buatlaporan">Buat Laporan</string>
    <string name="buatsaran">Buat Saran</string>
    <string name="uploadfoto">Upload Foto</string>
    <string name="txuploadfoto">Masukkan Foto</string>
    <string name="detaillaporan">Detail Laporan</string>
    <string name="txdetaillaporan">Masukkan Detail Laporan</string>
    <string name="inpsaran">Masukkan Judul Saran</string>
    <string name="inplaporan">Masukkan Judul Laporan</string>
    <string name="detailsaran">Detail Saran</string>
    <string name="txdetailsaran">Masukkan Detail Saran</string>
    <string name="tambah">Tambah</string>
    <string name="welcome">Selamat Datang !</string>
    <string name="descwelcom">Selamat Datang di aplikasi kami, kami hadir sebagai solusi anda atas keluhan mengenai infrastruktur umum yang mengalami kerusakan, dengan hadir aplikasi ini anda akan lebih dalam melaporkan berbagai kerusakan fasilitas umum</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>