<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardBerita"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/tgl_berita_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tglLaporan"
        android:textColor="@color/primary"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/jdl_berita_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jdlSaran"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/desc_berita_adm"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/descLaporan"
        android:textColor="@color/primary"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jdl_berita_adm"
        />

</androidx.constraintlayout.widget.ConstraintLayout>