<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahAdminFragment"
    >


    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tambah Admin"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_ketdaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Masukkan Data Diri"
        android:textSize="16sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_daftar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/tambah_nama"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/dafnama"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="12sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ketdaftar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/tambah_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/dafnotelp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tambah_nama"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/tambah_alamat"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/dafalamat"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="12sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tambah_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/tambah_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/dafpassword"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:textColor="@color/textgray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tambah_alamat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/tambah"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/tambah_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>