<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasukFragment"
    >

    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/shape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_ketmasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ketmasuk"
        android:textSize="16sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/ms_telp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/dafnotelp"
        android:textColor="@color/textgray"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ketmasuk" />

    <EditText
        android:id="@+id/ms_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/dafpassword"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/smoothgray"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="12sp"
        android:textColor="@color/textgray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ms_telp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/masuk"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/ms_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_sdhakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belum punya akun?"
            android:textSize="12sp"
            android:textColor="@color/textgray"
            />
        <TextView
            android:id="@+id/tv_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="12sp"
            android:textColor="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/tv_sdhakun"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>