<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardblob"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ImageView
            android:id="@+id/blob"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:src="@drawable/blob"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <ImageView
            android:id="@+id/imgspl"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:layout_centerVertical="false"
            android:src="@drawable/splash"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardsplash"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/rounded_top"
        android:backgroundTint="@color/secondary"
        app:layout_constraintTop_toBottomOf="@+id/cardblob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:id="@+id/tx_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="38dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/desc_welcome"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/descwelcom"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tx_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <Button
            android:id="@+id/btn_daftarsp"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"
            android:text="@string/daftar"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/desc_welcome"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <Button
            android:id="@+id/btn_masuksp"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/white"
            android:text="@string/masuk"
            android:textSize="18sp"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_daftarsp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>